# mpc_controller_pkgs

./: .gitignore  LICENSE  README.md
dockerfiles/: Dockerfile.ros2_mpc  Dockerfile.simulation  README.md  build_all.sh  build_mpc.sh  build_simulation.sh  clean_all.sh  dds_topics.yaml  entrypoint_mpc.sh  entrypoint_sim.sh  launch_mpc.sh  launch_mpc_omninxt.sh  launch_sim_mpc.sh  run_mpc.sh  run_simulation.sh  start_sim.sh  stop_all.sh
mpc_controller_ros2/: CMakeLists.txt  package.xml
mpc_controller_ros2/config/: .mpc_params.yaml.swm  .mpc_params.yaml.swn  mpc_omninxt_params.yaml  mpc_params.yaml
mpc_controller_ros2/include/mpc_controller_ros2/: mpc_controller.hpp  mpc_rate_solver.hpp  mpc_solver_base.hpp  mpc_torque_solver.hpp  trajectory_logger.hpp
mpc_controller_ros2/launch/: mpc.launch.py  mpc_omninxt.launch.py
mpc_controller_ros2/scripts/: generate_acados_solvers.py  plot_trajectory_data.py  trajectory_publisher.py
mpc_controller_ros2/src/: mpc_controller.cpp  mpc_controller_node.cpp  mpc_rate_solver.cpp  mpc_torque_solver.cpp  trajectory_logger.cpp
mpc_controller_ros2_msgs/: CMakeLists.txt  README.md  package.xml
mpc_controller_ros2_msgs/msg/: Trajectory.msg  TrajectoryState.msg
omninxt_bridge_ros2/: CMakeLists.txt
omninxt_bridge_ros2/config/: omninxt_params.yaml
omninxt_bridge_ros2/launch/: command_converter_launch.py
omninxt_bridge_ros2/src/: command_converter_node.cpp
px4_sim_bridge_ros2/: CMakeLists.txt  package.xml
px4_sim_bridge_ros2/config/: bridge_params.yaml
px4_sim_bridge_ros2/include/px4_sim_bridge_ros2/: px4_sim_bridge.hpp
px4_sim_bridge_ros2/launch/: px4_sim_bridge.launch.py  sim_with_mpc.launch.py
px4_sim_bridge_ros2/src/: px4_sim_bridge.cpp  px4_sim_bridge_node.cpp
