<?xml version="1.0"?>
<package format="3">
  <name>mpc_controller_ros2_msgs</name>
  <version>0.1.0</version>
  <description>Message definitions for MPC trajectory planning</description>
  <maintainer email="charbel.toumieh@epfl.ch"></maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
